<resources>
    <string name="app_name">QualityFurnishings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="logout">Log Out</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Do not have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="bedroom">BedRoom</string>
    <string name="furniture">Furniture</string>
    <string name="livingroom">LivingRoom</string>
    <string name="bathroom">BathRoom</string>
    <string name="kitchen">Kitchen</string>
    <string name="office">Office</string>
    <string name="findThe">Find The</string>
    <string name="bestFurniture">Best Furniture</string>
    <string name="productsOnSale">Products On Sale</string>
    <string name="email"> E-mail</string>
    <string name="fullname"> Full Name</string>
    <string name="userProfile"> User Profile</string>
    <string name="phoneNumber"> Phone Number</string>
    <string name="password"> Password</string>
    <string name="address"> Address</string>
    <string name="postalcode"> Postal Code</string>
    <string name="province"> Province</string>
    <string name="changePassword"> Change Password</string>
    <string name="editProfile"> Edit Profile</string>
    <string name="total">Total: $ </string>
    <string name="checkout"> CHECKOUT</string>
    <string name="myOrders"> My Orders</string>
    <string name="languageChange"> Change Language</string>
    <string name="bedroomFurniture">BEDROOM FURNITURE</string>
    <string name="kitchenFurniture">KITCHEN FURNITURE</string>
    <string name="livingroomFurniture">LIVINGROOM FURNITURE</string>
    <string name="bathroomFurniture">BATHROOM FURNITURE</string>
    <string name="officeFurniture">OFFICE FURNITURE</string>
    <string name="psc">Please Select a Category for which\n you want to Search the product
</string>
    <string name="fyb"> Find Your Best furniture </string>
    <string name="search"> Search </string>
    <string name="manage"> Manage </string>
    <string name="products"> Products </string>
    <string name="add"> Add </string>
    <string name="update"> Update/ </string>
    <string name="delete"> Delete </string>
    <string name="listOfOrders"> List Of Orders </string>
    <string name="name"> Name </string>
    <string name="adminProfile"> Admin Profile </string>
    <string name="uodateProfile"> Update Profile </string>
    <string name="productDescription"> Product Description </string>
    <string name="productQuantity"> Product Quantity </string>
    <string name="addProductOnSale"> Add Product On Sale </string>
    <string name="addProduct"> Add Product </string>
    <string name="user"> USER </string>
    <string name="admin"> ADMIN </string>
    <string name="eyeid"> Enter Your EmailId </string>
    <string name="sendLink"> SENDLINK </string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="uploadProfilePicture">Upload Profile Picture</string>
    <string name="selectQuality">Select Quality</string>
    <string name="superior">Superior</string>
    <string name="wellFounded">WELL FOUNDED</string>
    <string name="cheap">CHEAP</string>
    <string name="unwarranted">UNWARRANTED</string>
    <string name="priceRange">Price Range</string>
    <string name="addToCart">Add To Cart</string>
    <string name="menu">Menu</string>
    <string name="favouriteProducts">Favourite Products</string>
    <string name="orderid">OrderId :</string>
    <string name="orderStatus">Order Status :</string>
    <string name="amount">Amount :</string>
    <string name="alertDialogbox">Are You Sure want to LogOut ?</string>
    <string name="alertLanguagebox">Are You Sure want to change Language ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="alert">Alert !</string>
    <string name="productName">Product Name :</string>
    <string name="productPrice">Product Price :</string>
    <string name="paymentType">Payment Type</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="orderList">Order list </string>
    <string name="quantity">Quantity :</string>
    <string name="totalAmount">Total Amount : $</string>
    <string name="creditCard">Credit Card</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="confirmOrder">Confirm Order</string>
    <string name="quit">Quit</string>
    <string name="alertDialogForQuit">Do You want to close the application ?</string>
    <string name="cya">Confirm Your Address:</string>
    <string name="hn">House Number :</string>
    <string name="pc">Postal Code :</string>
    <string name="ana">Please Add your address in your Profile before Checkout</string>
    <string name="pac">Product Successfully Added to Cart</string>
    <string name="prf">Product Successfully Removed from Favourities</string>
    <string name="psf">Product Successfully Added to Favourities</string>
    <string name="eve">Enter a valid email</string>
    <string name="mailLink">Do you want to send link to your email?</string>
    <string name="une">User not exists</string>
    <string name="upu">User Profile Updated</string>
    <string name="checkoutAlert">Please add some products before checkout</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>