<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F8F6"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragment.UserProfileFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/userProfile"
        android:textSize="40sp"
        android:textColor="#000"
        android:layout_marginTop="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:layout_marginLeft="60dp"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvuserEmail"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:background="@drawable/adminprofiletextviewbg"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/fullname"
            android:layout_marginLeft="60dp"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvuserName"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/adminprofiletextviewbg"
        android:textColor="#000"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phoneNumber"
            android:layout_marginLeft="60dp"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvuserPhoneNumber"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:background="@drawable/adminprofiletextviewbg"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:layout_marginLeft="60dp"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvuserPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:background="@drawable/adminprofiletextviewbg"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:layout_marginLeft="60dp"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvuserAddress"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:background="@drawable/adminprofiletextviewbg"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/postalcode"
            android:layout_marginLeft="60dp"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvuserPostalCode"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:background="@drawable/adminprofiletextviewbg"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/province"
            android:layout_marginLeft="60dp"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvuserProvince"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:background="@drawable/adminprofiletextviewbg"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:textColor="#000"

        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/tvUpdatePassword"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        android:text="@string/changePassword"
        android:gravity="center_vertical"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/btuserEditProfile"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/editProfile"
        android:layout_marginTop="10dp"
        app:icon="@drawable/ic_baseline_edit_24" />


</LinearLayout>
</ScrollView>