<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6C7689"
    android:orientation="vertical"
    tools:context=".fragment.AdminHomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage"
        android:textColor="#1F2633"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textColor="#1F2633"
        android:textSize="45sp"
        android:layout_marginLeft="10dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/AddProducts"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/adminhomebg"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textColor="#1F2633"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/products"
                    android:textColor="#1F2633"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/UpdateProducts"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/adminhomebg2"
                android:layout_marginLeft="3dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textColor="#1F2633"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="#1F2633"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/products"
                    android:textColor="#1F2633"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/OrdersList"
            android:layout_width="310dp"
            android:layout_height="150dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/adminhomebg3"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listOfOrders"
                android:textColor="#1F2633"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"/>

        </LinearLayout>

    </LinearLayout>






</LinearLayout>