<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SearchActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/search"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textStyle="bold"
            android:paddingLeft="15dp"
            android:background="@drawable/searchndfilterbg"
            />
        <ImageView
            android:id="@+id/search"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:background="@drawable/searchndfilterbg"
            android:src="@drawable/ic_baseline_search_black"/>
        <ImageView
            android:id="@+id/refresh"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:background="@drawable/searchndfilterbg"
            android:src="@drawable/ic_baseline_refresh_24"/>



    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectQuality"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:textSize="15sp"/>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/superiorChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/superior"/>
        <Button
            android:id="@+id/wellChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/wellFounded"/>
        <Button
            android:id="@+id/cheapChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/cheap"/>
        <Button
            android:id="@+id/unwarrantedChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/unwarranted"/>
        </LinearLayout>
    </HorizontalScrollView>

<!--        <com.google.android.material.chip.ChipGroup-->
<!--            android:id="@+id/quality"-->
<!--            app:singleSelection="true"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            >-->
<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/superiorChip"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Superior"/>-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/wellChip"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:text="Well Founded"/>-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/cheapChip"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:text="Cheap"/>-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/unwarrantedChip"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:text="UnWarranted"/>-->

<!--        </com.google.android.material.chip.ChipGroup>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceRange"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:textSize="15sp"/>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/price0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0-50"/>
            <Button
                android:id="@+id/price50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="51-100"/>
            <Button
                android:id="@+id/price100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="101-150"/>
            <Button
                android:id="@+id/price150"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="150+"/>
        </LinearLayout>
    </HorizontalScrollView>




<!--        <com.google.android.material.chip.ChipGroup-->
<!--            android:id="@+id/GroupPrice"-->
<!--            android:layout_width="wrap_content"-->
<!--            app:singleSelection="true"-->
<!--            android:layout_height="wrap_content"-->
<!--            >-->
<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/price0"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="0 - 50"/>-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/price51"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:text="51 - 100"/>-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/price101"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:text="101 - 150"/>-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/price150"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:text="150+"/>-->

<!--        </com.google.android.material.chip.ChipGroup>-->

    <TextView
        android:id="@+id/tvNoSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_margin="20dp"
        android:text="Sorry! No products match this search"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsSerachView"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>






</LinearLayout>